--- a/indexRTL.html
+++ b/indexRTL.html
@@ -41,7 +41,7 @@
                 <div class="de-flex-col">
                   <!-- logo begin -->
                   <div id="logo">
-                    <a href="02-index.html">
+                    <a href="index.html">
                       <img class="logo" src="images/logo.png" alt="" />
                     </a>
                   </div>
@@ -51,23 +51,23 @@
                 <div class="de-flex-col">
                   <ul id="mainmenu">
                     <li>
-                      <a href="02-index.html">Home</a>
+                      <a href="index.html">Home</a>
                     </li>
-                    <li><a href="02-about.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li>
-                      <a href="02-Room.html">Rooms</a>
+                      <a href="Room.html">Rooms</a>
                     </li>
-                    <li><a href="02-booking.html">Booking</a></li>
+                    <li><a href="booking.html">Booking</a></li>
 
-                    <li><a href="02-blog.html">Blog</a></li>
-                    <li><a href="02-gallery.html">Gallery</a></li>
-                    <li><a href="02-contact.html">Contact</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                   </ul>
                 </div>
 
                 <div class="de-flex-col">
                   <div class="d-extra">
-                    <a class="btn-main" href="02-booking.html">Booking</a>
+                    <a class="btn-main" href="booking.html">Booking</a>
                   </div>
                   <div id="menu-btn"></div>
                 </div>
@@ -90,7 +90,7 @@
 
               <div class="pt80 pb80">
                 <div class="mo-nav text-center">
-                  <a href="02-index.html">
+                  <a href="index.html">
                     <img class="logo" src="images/logo.png" alt="" />
                   </a>
 
@@ -99,18 +99,18 @@
                   <!-- mainmenu begin -->
                   <ul id="mo-menu">
                     <li>
-                      <a href="02-about.html">Home</a>
+                      <a href="about.html">Home</a>
                       Home
                     </li>
-                    <li><a href="02-about.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li>
-                      <a href="02-about.html">Room</a>
+                      <a href="about.html">Room</a>
                     </li>
-                    <li><a href="02-booking.html">Booking</a></li>
+                    <li><a href="booking.html">Booking</a></li>
                     
-                    <li><a href="02-blog.html">Blog</a></li>
-                    <li><a href="02-gallery.html">Gallery</a></li>
-                    <li><a href="02-contact.html">Contact</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                   </ul>
                   <!-- mainmenu close -->
                 </div>
